--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 
-<h1>TO-DO</h1>
+<h1>TO-DO List</h1>
 
 <div id="inputDiv">
 <input id="inputData" name="inputData">
